# ChangeLog for app-crypt/pinentry
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/pinentry/ChangeLog,v 1.92 2009/01/22 19:17:41 swegener Exp $

*pinentry-0.7.5-r1 (22 Jan 2009)

  22 Jan 2009; Sven Wegener <swegener@gentoo.org> +pinentry-0.7.5-r1.ebuild:
  Add support for the static USE flag, bug #247770.

  06 Jan 2009; Sven Wegener <swegener@gentoo.org>
  -files/pinentry-0.7.2-grab.patch, -files/0.7.2-info.patch,
  -files/pinentry-0.7.4-grab.patch, -files/0.7.2-libcap.patch,
  -pinentry-0.7.3.ebuild, -pinentry-0.7.4-r1.ebuild:
  Cleanup.

  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> pinentry-0.7.3.ebuild,
  pinentry-0.7.4-r1.ebuild, pinentry-0.7.5.ebuild:
  QA: Get rid of deprecated qt_min_version().

  18 Jun 2008; Jeroen Roovers <jer@gentoo.org> pinentry-0.7.5.ebuild:
  Stable for HPPA (bug #217845).

  12 May 2008; Markus Rothe <corsair@gentoo.org> pinentry-0.7.5.ebuild:
  Stable on ppc64

  03 May 2008; Richard Freeman <rich0@gentoo.org> pinentry-0.7.5.ebuild:
  amd64 stable - 217845

  17 Apr 2008; nixnut <nixnut@gentoo.org> pinentry-0.7.5.ebuild:
  Stable on ppc wrt bug 217845

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> pinentry-0.7.5.ebuild:
  ia64/sparc/x86 stable wrt #217845

  16 Apr 2008; Tobias Klausmann <klausman@gentoo.org> pinentry-0.7.5.ebuild:
  Stable on alpha, bug #217845

*pinentry-0.7.5 (23 Mar 2008)

  23 Mar 2008; Sven Wegener <swegener@gentoo.org>
  +files/pinentry-0.7.5-grab.patch, +files/pinentry-gmem.patch,
  pinentry-0.7.3.ebuild, pinentry-0.7.4-r1.ebuild, +pinentry-0.7.5.ebuild:
  Version bump, bug #213383. Drop bindnow-flags, bug #213669. Workaround for
  API change in >=glib-2.16.1, bug #213382.

  13 Feb 2008; Alon Bar-Lev <alonbl@gentoo.org> -pinentry-0.7.2-r3.ebuild:
  Cleanup

  21 Jan 2008; Jeroen Roovers <jer@gentoo.org> pinentry-0.7.4-r1.ebuild:
  Stable for HPPA (bug #206664).
