@@ -5,7 +5,7 @@ AUX pinentry-0.7.4-grab.patch 717 RMD160 3dd998c7a2d06c8923345356489f58258121d3d
 AUX pinentry-0.7.5-grab.patch 536 RMD160 66f86ff0c8c208ec62de1dea2b2c3edeca41d0fb SHA1 cbb4a01242ce73ebb18c38d9541f03017691a265 SHA256 149fadfa505e55fa4f4e1fb5536066b87290566df4d890e6f4087d86f213188a
 AUX pinentry-gmem.patch 880 RMD160 82c41513e47be43a801ec0d2e6cf89857b5e373f SHA1 34abb7caa0aecbd4d8f592695c30e40311425688 SHA256 484dafa00a7fe6e04380d32f3a468082d68923c11f8e3fb007e09018b4b617f5
 DIST pinentry-0.7.5.tar.gz 422801 RMD160 4ed9d06981b647f9fd39b9d30651a36307869c2d SHA1 6699a1ff94c649e8905199d480c6412cc43bad3d SHA256 cb269ac058793b2df343a12a65e3402abc4b68503e105b12e4ca903d8d8e3172
-EBUILD pinentry-0.7.5-r1.ebuild 2603 RMD160 67a320101c06f9319a0b75abd6e3841e0be731e6 SHA1 8cecb3bea03b0bd4e61e164e51e09aa8689a9a65 SHA256 dc347021e06f3ab7e42e01e4a4bf96250487b77f06586d2a23230ae81b06582b
-EBUILD pinentry-0.7.5.ebuild 2134 RMD160 361b9dce1eb6ec92fd88eb9702198646a093314f SHA1 449b116f06a8d9b7dec7fab1c67b94a135eaaa5c SHA256 03492ea888935a2082327218b615c1b9bb82a7f1a84b5537bfbb9b47de762236
-MISC ChangeLog 12194 RMD160 21598fcbbb6226f8742c98248896bd5cb17dca4c SHA1 8cd29a0f4c7ed38b1b83936f62583eb3fa282f9f SHA256 cc04d00a96ab74724416107ab7a7ca272254d6534f43fb89a796ecbaa7215857
+EBUILD pinentry-0.7.5-r1.ebuild 2601 RMD160 495dae44248a01d432aad556f8eae85e0861aa3e SHA1 6d7b98025cec9c6327b75bc5ed4d04d94183caa2 SHA256 2c9b3e4e13d4967c3608b623280b9c7899167925fdba001adec2136e4ef75fcd
+EBUILD pinentry-0.7.5.ebuild 2137 RMD160 137f6c9bb503f1443a82e67b8ba0246846df7750 SHA1 8095335b42a449e0b5d4862abdf5594273285c1c SHA256 b684c9303386229f96ea331644c6287c418ef75d7baef9a96d738418c2665646
+MISC ChangeLog 12343 RMD160 95c5216f53412592f8f7fbfae4628d6009f5fcab SHA1 774040ee1cde4f4f37d6a805945318d03717cb99 SHA256 6be093ff142709fcc386f1e792a1953735a1b050bfaf232ab6a75542d6edb2c6
 MISC metadata.xml 275 RMD160 7aca4724ede81b0eaad9b4536f00a6a805727cef SHA1 b1a92ff0d6bfacd26122ac4dbd4725ef2b023f81 SHA256 1e9c7343efc06a4d4143421f4bf3740c30f71ed6ce5011231505e7e911f31548
